some minimal styles to make things visible

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <script>
     System.import('lib/main.js');
   </script>
+  <link href="./lib/style/global.css" rel="stylesheet">
 </head>
 <body>
   <div id='root'></div>
